# simulation_initialization_ros_tool

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  README_initialization.md  dependencies.rosinstall  package.xml  setup_workspace.sh
doc/: lanelet_id_roslaunch.md
launch/: _whole_framework.launch  custom_rosconsole.conf  simulation_framework.rviz
launch/vehicle_launchfiles/: sample_dynamic_obstacle.launch  sample_static_obstacle.launch  sample_vehicle.launch  sample_vehicle_lanelet_init.launch
res/: lanelet_figure8.osm  sample_hull.xml  sample_hull_pedestrian.xml  traj1.osm  traj2.osm  traj3.osm
test/: test_whole_framework.py  test_whole_framework.test
